--- a/public/style.css
+++ b/public/style.css
@@ -8,6 +8,7 @@ body {
     font-size: 20px;
     margin-bottom: 20px;
     margin-top: 20px;
+    font-family: Arial, Helvetica, sans-serif;
 }
 
 #main {
